--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     <header id="header" class="">
       <div class="header">
         <img class="logoClarito" src="assets/images/Logo Clarito.png" alt="Logo Clarito">
-        <img class="logoEuro" src="assets/images/Logo 2 Euro2024.png" alt="Logo Euro2024">
-        <img class="logoPrimor" src="assets/images/Logo Primor das Torres.svg" alt="Logo Primor das Torres">
+        <img class="logoEuro" src="assets/images/Logo Euro2024 Primor.png" alt="Logo Euro2024">
+        <img class="logoPrimor" src="assets/images/Logo Primor.png" alt="Logo Primor das Torres">
       </div>
     </header>
 
