Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -400,59 +400,65 @@
                 <tr>
                   <td>5</td>
                   <td><img src="assets/images/Bandeira Inglaterra.png"></td>
-                  <td>Burguês</td>
+                  <td>Caio</td>
                   <td>2</td>
                 </tr>
                 <tr>
                   <td>6</td>
+                  <td><img src="assets/images/Bandeira Inglaterra.png"></td>
+                  <td>Burguês</td>
+                  <td>2</td>
+                </tr>
+                <tr>
+                  <td>7</td>
                   <td><img src="assets/images/Bandeira Holanda.jpg"></td>
                   <td>Gustavo</td>
                   <td>1</td>
                 </tr>
                 <tr>
-                  <td>7</td>
+                  <td>8</td>
                   <td><img src="assets/images/Bandeira Bélgica.png"></td>
                   <td>Clarito</td>
                   <td>1</td>
                 </tr>
                 <tr>
-                  <td>8</td>
+                  <td>9</td>
                   <td><img src="assets/images/Bandeira Croácia.jpg"></td>
                   <td>Helton</td>
                   <td>1</td>
                 </tr>
                 <tr>
-                  <td>9</td>
+                  <td>10</td>
                   <td><img src="assets/images/Bandeira Inglaterra.png"></td>
                   <td>Rafael</td>
                   <td>1</td>
                 </tr>
                 <tr>
-                  <td>10</td>
+                  <td>11</td>
                   <td><img src="assets/images/Bandeira Dinamarca.jpg"></td>
                   <td>Marcos</td>
                   <td>1</td>
                 </tr>
                 <tr>
-                  <td>11</td>
+                  <td>12</td>
                   <td><img src="assets/images/Bandeira Dinamarca.jpg"></td>
                   <td>Helbert</td>
                   <td>1</td>
                 </tr>
                 <tr>
-                  <td>12</td>
+                  <td>13</td>
                   <td><img src="assets/images/Bandeira Dinamarca.jpg"></td>
                   <td>Ayrton</td>
                   <td>1</td>
                 </tr>
                 <tr>
-                  <td>13</td>
+                  <td>14</td>
                   <td><img src="assets/images/Bandeira Inglaterra.png"></td>
                   <td>Matheus</td>
                   <td>1</td>
                 </tr>
                 <tr>
-                  <td>14</td>
+                  <td>15</td>
                   <td><img src="assets/images/Bandeira Inglaterra.png"></td>
                   <td>Victor Hugo</td>
                   <td>1</td>
