Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -399,7 +399,7 @@
                 </tr>
                 <tr>
                   <td>5</td>
-                  <td><img src="assets/images/Bandeira Inglaterra.png"></td>
+                  <td><img src="assets/images/Bandeira Croácia.jpg"></td>
                   <td>Caio</td>
                   <td>2</td>
                 </tr>
