Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -463,6 +463,12 @@
                   <td>Matheus</td>
                   <td>1</td>
                 </tr>
+                <tr>
+                  <td>16</td>
+                  <td><img src="assets/images/Bandeira Bélgica.png"></td>
+                  <td>Rafael</td>
+                  <td>1</td>
+                </tr>
               </table>
             </div>
             <!-- Cartões Amarelos -->
