--- a/index.html
+++ b/index.html
@@ -34,6 +34,80 @@
     <!-- Conteúdo principal -->
     <main>
       <div class="main">
+        <!-- Mata Mata -->
+        <div style="display: none;" class="tabelaMataMata">
+          <div class="cardFinal">
+            <div class="tacaFinal">
+              <img src="assets/images/Taça Euro2024.png" alt="">
+            </div>
+            <div class="timesTitle">
+              <img src="assets/icons/trophy-solid.svg">
+              <div class="titleCardFinal">
+                <h1><strong>Final</strong></h1>
+                <i>28 de SETEMBRO 2024</i>
+                <i>17:50</i>
+              </div>
+              <img src="assets/icons/trophy-solid.svg">
+            </div>
+            <div class="resultadoFinal">
+              <h2><strong></strong></h2>
+              <h2><strong></strong></h2>
+              <h2><strong>x</strong></h2>
+              <h2><strong></strong></h2>
+              <h2><strong></strong></h2>
+            </div>
+          </div>
+          <!-- Disputa 3º Lugar -->
+          <div class="cardSemi">
+            <div class="titleCardSemi">
+              <h1><strong>DISPUTA 3º LUGAR</strong></h1>
+              <i>28 de SETEMBRO 2024</i>
+            </div>
+            <table>
+              <tr>
+                <td>17:00</td>
+                <td><img src="assets/icons/trophy-solid.svg"></td>
+                <td>A definir...</td>
+                <td></td>
+                <td>x</td>
+                <td></td>
+                <td>A definir...</td>
+                <td><img src="assets/icons/trophy-solid.svg"></td>
+              </tr>
+            </table>
+          </div>
+          <!-- Semifinal -->
+          <div class="cardSemi">
+            <div class="titleCardSemi">
+              <h1><strong>SEMIFINAL</strong></h1>
+              <i>28 de SETEMBRO 2024</i>
+            </div>
+            <table>
+              <tr>
+                <td>17:00</td>
+                <td><img src="assets/icons/trophy-solid.svg"></td>
+                <td>A definir...</td>
+                <td></td>
+                <td>x</td>
+                <td></td>
+                <td>A definir...</td>
+                <td><img src="assets/icons/trophy-solid.svg"></td>
+              </tr>
+            </table>
+            <table>
+              <tr>
+                <td>17:50</td>
+                <td><img src="assets/icons/trophy-solid.svg"></td>
+                <td>A definir...</td>
+                <td></td>
+                <td>x</td>
+                <td></td>
+                <td>A definir...</td>
+                <td><img src="assets/icons/trophy-solid.svg"></td>
+              </tr>
+            </table>
+          </div>
+        </div>
         <!-- Tabela de Jogos -->
         <div class="tabelaJogos">
           <!-- Rodada 1 -->
@@ -529,6 +603,8 @@
       <div class="footer">
       </div>
     </footer>
+
+    <div class="background"></div>
 
     <script src="assets/js/index.js"></script>
     
