--- a/index.html
+++ b/index.html
@@ -340,6 +340,7 @@
               <h2><strong>Grupo A</strong></h2>
               <table>
                 <tr>
+                  <td></td>
                   <td>#</td>
                   <td></td>
                   <td>Seleção</td>
@@ -351,6 +352,7 @@
                   <td>PTS</td>
                 </tr>
                 <tr>
+                  <td class="corClassificadoGrupo"></td>
                   <td>1</td>
                   <td><img src="assets/images/Bandeira Holanda.jpg"></td>
                   <td>Holanda</td>
@@ -362,6 +364,7 @@
                   <td>6</td> <!-- Pontos -->
                 </tr>
                 <tr>
+                  <td class="corClassificadoGrupo"></td>
                   <td>2</td>
                   <td><img src="assets/images/Bandeira Bélgica.png"></td>
                   <td>Bélgica</td>
@@ -373,6 +376,7 @@
                   <td>0</td> <!-- Pontos -->
                 </tr>
                 <tr>
+                  <td class="corDesclassificadoGrupo"></td>
                   <td>3</td>
                   <td><img src="assets/images/Bandeira Turquia.png"></td>
                   <td>Turquia</td>
@@ -390,6 +394,7 @@
               <h2><strong>Grupo B</strong></h2>
               <table>
                 <tr>
+                  <td></td>
                   <td>#</td>
                   <td></td>
                   <td>Seleção</td>
@@ -401,6 +406,7 @@
                   <td>PTS</td>
                 </tr>
                 <tr>
+                  <td class="corClassificadoGrupo"></td>
                   <td>1</td>
                   <td><img src="assets/images/Bandeira Dinamarca.jpg"></td>
                   <td>Dinamarca</td>
@@ -412,6 +418,7 @@
                   <td>6</td> <!-- Pontos -->
                 </tr>
                 <tr>
+                  <td class="corClassificadoGrupo"></td>
                   <td>2</td>
                   <td><img src="assets/images/Bandeira Croácia.jpg"></td>
                   <td>Croácia</td>
@@ -423,6 +430,7 @@
                   <td>4</td> <!-- Pontos -->
                 </tr>
                 <tr>
+                  <td class="corDesclassificadoGrupo"></td>
                   <td>3</td>
                   <td><img src="assets/images/Bandeira Inglaterra.png"></td>
                   <td>Inglaterra</td>
