--- a/index.html
+++ b/index.html
@@ -469,86 +469,116 @@
                 </tr>
                 <tr>
                   <td>3</td>
+                  <td><img src="assets/images/Bandeira Inglaterra.png"></td>
+                  <td>Ewerton</td>
+                  <td>3</td>
+                </tr>
+                <tr>
+                  <td>4</td>
                   <td><img src="assets/images/Bandeira Dinamarca.jpg"></td>
                   <td>João Marcos</td>
                   <td>3</td>
                 </tr>
                 <tr>
-                  <td>4</td>
+                  <td>5</td>
                   <td><img src="assets/images/Bandeira Bélgica.png"></td>
                   <td>Guilherme</td>
                   <td>3</td>
                 </tr>
                 <tr>
-                  <td>5</td>
+                  <td>6</td>
                   <td><img src="assets/images/Bandeira Croácia.jpg"></td>
                   <td>Caio</td>
                   <td>2</td>
                 </tr>
                 <tr>
-                  <td>6</td>
+                  <td>7</td>
                   <td><img src="assets/images/Bandeira Inglaterra.png"></td>
                   <td>Burguês</td>
                   <td>2</td>
                 </tr>
                 <tr>
-                  <td>7</td>
+                  <td>8</td>
                   <td><img src="assets/images/Bandeira Holanda.jpg"></td>
                   <td>Gustavo</td>
                   <td>2</td>
                 </tr>
                 <tr>
-                  <td>8</td>
+                  <td>9</td>
                   <td><img src="assets/images/Bandeira Croácia.jpg"></td>
                   <td>Helton</td>
                   <td>2</td>
                 </tr>
                 <tr>
-                  <td>9</td>
+                  <td>10</td>
                   <td><img src="assets/images/Bandeira Inglaterra.png"></td>
                   <td>Victor Hugo</td>
                   <td>2</td>
                 </tr>
                 <tr>
-                  <td>10</td>
+                  <td>11</td>
                   <td><img src="assets/images/Bandeira Inglaterra.png"></td>
-                  <td>Rafael</td>
-                  <td>1</td>
+                  <td>Matheus</td>
+                  <td>2</td>
                 </tr>
                 <tr>
-                  <td>11</td>
+                  <td>12</td>
+                  <td><img src="assets/images/Bandeira Inglaterra.png"></td>
+                  <td>Rafael</td>
+                  <td>2</td>
+                </tr>
+                <tr>
+                  <td>13</td>
                   <td><img src="assets/images/Bandeira Bélgica.png"></td>
                   <td>Clarito</td>
                   <td>1</td>
                 </tr>
                 <tr>
-                  <td>12</td>
+                  <td>14</td>
                   <td><img src="assets/images/Bandeira Dinamarca.jpg"></td>
                   <td>Marcos</td>
                   <td>1</td>
                 </tr>
                 <tr>
-                  <td>13</td>
+                  <td>15</td>
                   <td><img src="assets/images/Bandeira Dinamarca.jpg"></td>
                   <td>Helbert</td>
                   <td>1</td>
                 </tr>
                 <tr>
-                  <td>14</td>
+                  <td>16</td>
                   <td><img src="assets/images/Bandeira Dinamarca.jpg"></td>
                   <td>Ayrton</td>
                   <td>1</td>
                 </tr>
                 <tr>
-                  <td>15</td>
-                  <td><img src="assets/images/Bandeira Inglaterra.png"></td>
-                  <td>Matheus</td>
+                  <td>17</td>
+                  <td><img src="assets/images/Bandeira Bélgica.png"></td>
+                  <td>Rafael</td>
                   <td>1</td>
                 </tr>
                 <tr>
-                  <td>16</td>
-                  <td><img src="assets/images/Bandeira Bélgica.png"></td>
-                  <td>Rafael</td>
+                  <td>18</td>
+                  <td><img src="assets/images/Bandeira Inglaterra.png"></td>
+                  <td>Hamilton</td>
+                  <td>1</td>
+                </tr>
+                <tr>
+                  <td>19</td>
+                  <td><img src="assets/images/Bandeira Holanda.jpg"></td>
+                  <td>Pedro</td>
+                  <td>1</td>
+                </tr>
+                <tr>
+                  <td>20</td>
+                  <td><img src="assets/images/Bandeira Turquia.png"></td>
+                  <td>Ceara</td>
+                  <td>1</td>
+                </tr>
+                <tr>
+                  <td>21</td>
+                  <td><img src="assets/images/Bandeira Turquia.png"></td>
+                  <td>Artur Gabriel</td>
                   <td>1</td>
                 </tr>
               </table>
