--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 
     <!-- Tabs -->
     <div class="tabs">
-      <button id="buttonJogos">Jogos</button>
-      <button id="buttonTabela">Classificações</button>
+      <button id="buttonPartidas">Partidas</button>
+      <button id="buttonTabela">Classificação</button>
       <button id="buttonGaleria">Galeria</button>
     </div>
 
