--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
 
     <!-- Tabs -->
     <div class="tabs">
-      <button id="buttonPartidas">Partidas</button>
+      <button id="buttonPartidas">Jogos 1º Fase</button>
+      <button style="display: none;" id="buttonEliminatorias">Jogos Eliminatórias</button>
       <button id="buttonTabela">Classificação</button>
       <button id="buttonGaleria">Galeria</button>
     </div>
@@ -279,7 +280,7 @@
                 <th colspan="7">Jogo</th>
               </tr>
               <tr>
-                <td>17:00</td>
+                <td>18:00</td>
                 <td><img src="assets/images/Bandeira Dinamarca.jpg"></td>
                 <td>Dinamarca</td>
                 <td></td>
@@ -289,7 +290,7 @@
                 <td><img src="assets/images/Bandeira Bélgica.png"></td>
               </tr>
               <tr>
-                <td>17:50</td>
+                <td>19:30</td>
                 <td><img src="assets/images/Bandeira Turquia.png"></td>
                 <td>Turquia</td>
                 <td></td>
@@ -299,6 +300,9 @@
                 <td><img src="assets/images/Bandeira Croácia.jpg"></td>
               </tr>
             </table>
+            <div class="infoRodada">
+              <img src="assets/icons/alert-icon.svg" alt="Alerta"><strong>DATA ALTERADA!</strong> Turquia x Croácia > 05/09 <
+            </div>
           </div>
           <!-- Rodada 7 -->
           <div class="tabelaX corTabela7">
