--- a/index.html
+++ b/index.html
@@ -112,228 +112,19 @@
         <!-- Tabela de Jogos -->
         <div class="tabelaJogos">
           <!-- Rodada 1 -->
-          <div class="tabelaX corTabela1">
-            <h2><strong>1º Rodada 03/08</strong></h2>
-            <table>
-              <tr>
-                <th>Hora</th>
-                <th colspan="7">Jogo</th>
-              </tr>
-              <tr>
-                <td>16:30</td>
-                <td><img src="assets/images/Bandeira Bélgica.png"></td>
-                <td>Bélgica</td>
-                <td>2</td>
-                <td>x</td>
-                <td>4</td>
-                <td>Holanda</td>
-                <td><img src="assets/images/Bandeira Holanda.jpg"></td>
-              </tr>
-              <tr>
-                <td>17:20</td>
-                <td><img src="assets/images/Bandeira Croácia.jpg"></td>
-                <td>Croácia</td>
-                <td>3</td>
-                <td>x</td>
-                <td>3</td>
-                <td>Inglaterra</td>
-                <td><img src="assets/images/Bandeira Inglaterra.png"></td>
-              </tr>
-              <tr>
-                <td>18:00</td>
-                <td><img src="assets/images/Bandeira Turquia.png"></td>
-                <td>Turquia</td>
-                <td>0</td>
-                <td>x</td>
-                <td>3</td>
-                <td>Dinamarca</td>
-                <td><img src="assets/images/Bandeira Dinamarca.jpg"></td>
-              </tr>
-            </table>
-          </div>
+          <div id="jornada1" class="tabelaX corTabela1"></div>
           <!-- Rodada 2 -->
-          <div class="tabelaX corTabela2">
-            <h2><strong>2º Rodada 10/08</strong></h2>
-            <table>
-              <tr>
-                <th>Hora</th>
-                <th colspan="7">Jogo</th>
-              </tr>
-              <tr>
-                <td>16:00</td>
-                <td><img src="assets/images/Bandeira Bélgica.png"></td>
-                <td>Bélgica</td>
-                <td>2</td>
-                <td>x</td>
-                <td>3</td>
-                <td>Inglaterra</td>
-                <td><img src="assets/images/Bandeira Inglaterra.png"></td>
-              </tr>
-              <tr>
-                <td>16:50</td>
-                <td><img src="assets/images/Bandeira Croácia.jpg"></td>
-                <td>Croácia</td>
-                <td>1</td>
-                <td>x</td>
-                <td>3</td>
-                <td>Dinamarca</td>
-                <td><img src="assets/images/Bandeira Dinamarca.jpg"></td>
-              </tr>
-            </table>
-          </div>
+          <div id="jornada2" class="tabelaX corTabela2"></div>
           <!-- Rodada 3 -->
-          <div class="tabelaX corTabela3">
-            <h2><strong>3º Rodada 17/08</strong></h2>
-            <table>
-              <tr>
-                <th>Hora</th>
-                <th colspan="7">Jogo</th>
-              </tr>
-              <tr>
-                <td>17:00</td>
-                <td><img src="assets/images/Bandeira Holanda.jpg"></td>
-                <td>Holanda</td>
-                <td>2</td>
-                <td>x</td>
-                <td>1</td>
-                <td>Inglaterra</td>
-                <td><img src="assets/images/Bandeira Inglaterra.png"></td>
-              </tr>
-              <tr>
-                <td>17:50</td>
-                <td><img src="assets/images/Bandeira Bélgica.png"></td>
-                <td>Bélgica</td>
-                <td>1</td>
-                <td>x</td>
-                <td>5</td>
-                <td>Croácia</td>
-                <td><img src="assets/images/Bandeira Croácia.jpg"></td>
-              </tr>
-            </table>
-          </div>
+          <div id="jornada3" class="tabelaX corTabela3"></div>
           <!-- Rodada 4 -->
-          <div class="tabelaX corTabela4">
-            <h2><strong style="color: black;">4º Rodada 24/08</strong></h2>
-            <table>
-              <tr>
-                <th>Hora</th>
-                <th colspan="7">Jogo</th>
-              </tr>
-              <tr>
-                <td>17:00</td>
-                <td><img src="assets/images/Bandeira Holanda.jpg"></td>
-                <td>Holanda</td>
-                <td>2</td>
-                <td>x</td>
-                <td>1</td>
-                <td>Dinamarca</td>
-                <td><img src="assets/images/Bandeira Dinamarca.jpg"></td>
-              </tr>
-              <tr>
-                <td>17:50</td>
-                <td><img src="assets/images/Bandeira Inglaterra.png"></td>
-                <td>Inglaterra</td>
-                <td>6</td>
-                <td>x</td>
-                <td>2</td>
-                <td>Turquia</td>
-                <td><img src="assets/images/Bandeira Turquia.png"></td>
-              </tr>
-            </table>
-          </div>
+          <div id="jornada4" class="tabelaX corTabela4"></div>
           <!-- Rodada 5 -->
-          <div class="tabelaX corTabela5">
-            <h2><strong style="color: black;">5º Rodada 31/08</strong></h2>
-            <table>
-              <tr>
-                <th>Hora</th>
-                <th colspan="7">Jogo</th>
-              </tr>
-              <tr>
-                <td>17:00</td>
-                <td><img src="assets/images/Bandeira Inglaterra.png"></td>
-                <td>Inglaterra</td>
-                <td>1</td>
-                <td>x</td>
-                <td>7</td>
-                <td>Dinamarca</td>
-                <td><img src="assets/images/Bandeira Dinamarca.jpg"></td>
-              </tr>
-              <tr>
-                <td>17:50</td>
-                <td><img src="assets/images/Bandeira Holanda.jpg"></td>
-                <td>Holanda</td>
-                <td>0</td>
-                <td>x</td>
-                <td>3</td>
-                <td>Turquia</td>
-                <td><img src="assets/images/Bandeira Turquia.png"></td>
-              </tr>
-            </table>
-          </div>
+          <div id="jornada5" class="tabelaX corTabela5"></div>
           <!-- Rodada 6 -->
-          <div class="tabelaX corTabela6">
-            <h2><strong>6º Rodada 07/09</strong></h2>
-            <table>
-              <tr>
-                <th>Hora</th>
-                <th colspan="7">Jogo</th>
-              </tr>
-              <tr>
-                <td>18:00</td>
-                <td><img src="assets/images/Bandeira Dinamarca.jpg"></td>
-                <td>Dinamarca</td>
-                <td></td>
-                <td>x</td>
-                <td></td>
-                <td>Bélgica</td>
-                <td><img src="assets/images/Bandeira Bélgica.png"></td>
-              </tr>
-              <tr>
-                <td>19:30</td>
-                <td><img src="assets/images/Bandeira Turquia.png"></td>
-                <td>Turquia</td>
-                <td></td>
-                <td>x</td>
-                <td></td>
-                <td>Croácia</td>
-                <td><img src="assets/images/Bandeira Croácia.jpg"></td>
-              </tr>
-            </table>
-            <div class="infoRodada">
-              <img src="assets/icons/alert-icon.svg" alt="Alerta"><strong>DATA ALTERADA!</strong> Turquia x Croácia > 05/09 <
-            </div>
-          </div>
+          <div id="jornada6" class="tabelaX corTabela6"></div>
           <!-- Rodada 7 -->
-          <div class="tabelaX corTabela7">
-            <h2><strong>7º Rodada 14/09</strong></h2>
-            <table>
-              <tr>
-                <th>Hora</th>
-                <th colspan="7">Jogo</th>
-              </tr>
-              <tr>
-                <td>17:00</td>
-                <td><img src="assets/images/Bandeira Bélgica.png"></td>
-                <td>Bélgica</td>
-                <td></td>
-                <td>x</td>
-                <td></td>
-                <td>Turquia</td>
-                <td><img src="assets/images/Bandeira Turquia.png"></td>
-              </tr>
-              <tr>
-                <td>17:50</td>
-                <td><img src="assets/images/Bandeira Holanda.jpg"></td>
-                <td>Holanda</td>
-                <td></td>
-                <td>x</td>
-                <td></td>
-                <td>Croácia</td>
-                <td><img src="assets/images/Bandeira Croácia.jpg"></td>
-              </tr>
-            </table>
-          </div>
+          <div id="jornada7" class="tabelaX corTabela7"></div>
         </div>
         <!-- Tabela de Pontos, Artilharia e Amarelos -->
         <div class="tabelaPAA">
@@ -342,109 +133,13 @@
             <!-- Grupo A -->
             <div class="tabelaPontosX">
               <h2><strong>Grupo A</strong></h2>
-              <table>
-                <tr>
-                  <td></td>
-                  <td>#</td>
-                  <td></td>
-                  <td>Seleção</td>
-                  <td>J</td>
-                  <td>V</td>
-                  <td>E</td>
-                  <td>D</td>
-                  <td>Gols</td>
-                  <td>PTS</td>
-                </tr>
-                <tr>
-                  <td class="corClassificadoGrupo"></td>
-                  <td>1</td>
-                  <td><img src="assets/images/Bandeira Holanda.jpg"></td>
-                  <td>Holanda</td>
-                  <td>4</td> <!-- Jogos -->
-                  <td>3</td> <!-- Vitórias -->
-                  <td>0</td> <!-- Empates -->
-                  <td>1</td> <!-- Derrotas -->
-                  <td>8:7</td> <!-- Gols -->
-                  <td>9</td> <!-- Pontos -->
-                </tr>
-                <tr>
-                  <td class="corClassificadoGrupo"></td>
-                  <td>2</td>
-                  <td><img src="assets/images/Bandeira Turquia.png"></td>
-                  <td>Turquia</td>
-                  <td>3</td> <!-- Jogos -->
-                  <td>1</td> <!-- Vitórias -->
-                  <td>0</td> <!-- Empates -->
-                  <td>2</td> <!-- Derrotas -->
-                  <td>5:9</td> <!-- Gols -->
-                  <td>3</td> <!-- Pontos -->
-                </tr>
-                <tr>
-                  <td class="corDesclassificadoGrupo"></td>
-                  <td>3</td>
-                  <td><img src="assets/images/Bandeira Bélgica.png"></td>
-                  <td>Bélgica</td>
-                  <td>3</td> <!-- Jogos -->
-                  <td>0</td> <!-- Vitórias -->
-                  <td>0</td> <!-- Empates -->
-                  <td>3</td> <!-- Derrotas -->
-                  <td>5:12</td> <!-- Gols -->
-                  <td>0</td> <!-- Pontos -->
-                </tr>
+              <table id="classificacao1">
               </table>
             </div>
             <!-- Grupo B -->
             <div class="tabelaPontosX">
               <h2><strong>Grupo B</strong></h2>
-              <table>
-                <tr>
-                  <td></td>
-                  <td>#</td>
-                  <td></td>
-                  <td>Seleção</td>
-                  <td>J</td>
-                  <td>V</td>
-                  <td>E</td>
-                  <td>D</td>
-                  <td>Gols</td>
-                  <td>PTS</td>
-                </tr>
-                <tr>
-                  <td class="corClassificadoGrupo"></td>
-                  <td>1</td>
-                  <td><img src="assets/images/Bandeira Dinamarca.jpg"></td>
-                  <td>Dinamarca</td>
-                  <td>4</td> <!-- Jogos -->
-                  <td>3</td> <!-- Vitórias -->
-                  <td>0</td> <!-- Empates -->
-                  <td>1</td> <!-- Derrotas -->
-                  <td>14:4</td> <!-- Gols -->
-                  <td>9</td> <!-- Pontos -->
-                </tr>
-                <tr>
-                  <td class="corClassificadoGrupo"></td>
-                  <td>2</td>
-                  <td><img src="assets/images/Bandeira Inglaterra.png"></td>
-                  <td>Inglaterra</td>
-                  <td>5</td> <!-- Jogos -->
-                  <td>2</td> <!-- Vitórias -->
-                  <td>1</td> <!-- Empates -->
-                  <td>2</td> <!-- Derrotas -->
-                  <td>14:16</td> <!-- Gols -->
-                  <td>7</td> <!-- Pontos -->
-                </tr>
-                <tr>
-                  <td class="corDesclassificadoGrupo"></td>
-                  <td>3</td>
-                  <td><img src="assets/images/Bandeira Croácia.jpg"></td>
-                  <td>Croácia</td>
-                  <td>3</td> <!-- Jogos -->
-                  <td>1</td> <!-- Vitórias -->
-                  <td>1</td> <!-- Empates -->
-                  <td>1</td> <!-- Derrotas -->
-                  <td>9:7</td> <!-- Gols -->
-                  <td>4</td> <!-- Pontos -->
-                </tr>
+              <table id="classificacao2">
               </table>
             </div>
           </div>
@@ -461,13 +156,13 @@
                 </tr>
                 <tr>
                   <td>1</td>
-                  <td><img src="assets/images/Bandeira Croácia.jpg"></td>
+                  <td><img src="assets/images/Bandeira Croácia.png"></td>
                   <td>Nero</td>
                   <td>5</td>
                 </tr>
                 <tr>
                   <td>2</td>
-                  <td><img src="assets/images/Bandeira Holanda.jpg"></td>
+                  <td><img src="assets/images/Bandeira Holanda.png"></td>
                   <td>Thiago</td>
                   <td>4</td>
                 </tr>
@@ -479,7 +174,7 @@
                 </tr>
                 <tr>
                   <td>4</td>
-                  <td><img src="assets/images/Bandeira Dinamarca.jpg"></td>
+                  <td><img src="assets/images/Bandeira Dinamarca.png"></td>
                   <td>João Marcos</td>
                   <td>3</td>
                 </tr>
@@ -491,7 +186,7 @@
                 </tr>
                 <tr>
                   <td>6</td>
-                  <td><img src="assets/images/Bandeira Croácia.jpg"></td>
+                  <td><img src="assets/images/Bandeira Croácia.png"></td>
                   <td>Caio</td>
                   <td>2</td>
                 </tr>
@@ -503,13 +198,13 @@
                 </tr>
                 <tr>
                   <td>8</td>
-                  <td><img src="assets/images/Bandeira Holanda.jpg"></td>
+                  <td><img src="assets/images/Bandeira Holanda.png"></td>
                   <td>Gustavo</td>
                   <td>2</td>
                 </tr>
                 <tr>
                   <td>9</td>
-                  <td><img src="assets/images/Bandeira Croácia.jpg"></td>
+                  <td><img src="assets/images/Bandeira Croácia.png"></td>
                   <td>Helton</td>
                   <td>2</td>
                 </tr>
@@ -539,19 +234,19 @@
                 </tr>
                 <tr>
                   <td>14</td>
-                  <td><img src="assets/images/Bandeira Dinamarca.jpg"></td>
+                  <td><img src="assets/images/Bandeira Dinamarca.png"></td>
                   <td>Marcos</td>
                   <td>1</td>
                 </tr>
                 <tr>
                   <td>15</td>
-                  <td><img src="assets/images/Bandeira Dinamarca.jpg"></td>
+                  <td><img src="assets/images/Bandeira Dinamarca.png"></td>
                   <td>Helbert</td>
                   <td>1</td>
                 </tr>
                 <tr>
                   <td>16</td>
-                  <td><img src="assets/images/Bandeira Dinamarca.jpg"></td>
+                  <td><img src="assets/images/Bandeira Dinamarca.png"></td>
                   <td>Ayrton</td>
                   <td>1</td>
                 </tr>
@@ -569,7 +264,7 @@
                 </tr>
                 <tr>
                   <td>19</td>
-                  <td><img src="assets/images/Bandeira Holanda.jpg"></td>
+                  <td><img src="assets/images/Bandeira Holanda.png"></td>
                   <td>Pedro</td>
                   <td>1</td>
                 </tr>
@@ -602,7 +297,7 @@
                   <td>1</td>
                 </tr>
                 <tr>
-                  <td><img src="assets/images/Bandeira Croácia.jpg"></td>
+                  <td><img src="assets/images/Bandeira Croácia.png"></td>
                   <td>Marquinhos</td>
                   <td>1</td>
                 </tr>
@@ -612,12 +307,12 @@
                   <td>1</td>
                 </tr>
                 <tr>
-                  <td><img src="assets/images/Bandeira Croácia.jpg"></td>
+                  <td><img src="assets/images/Bandeira Croácia.png"></td>
                   <td>Nero</td>
                   <td>1</td>
                 </tr>
                 <tr>
-                  <td><img src="assets/images/Bandeira Holanda.jpg"></td>
+                  <td><img src="assets/images/Bandeira Holanda.png"></td>
                   <td>Thiago</td>
                   <td>1</td>
                 </tr>
