Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -309,11 +309,16 @@
                 <tr>
                   <td><img src="assets/images/Bandeira Croácia.png"></td>
                   <td>Nero</td>
-                  <td>1</td>
+                  <td>2</td>
                 </tr>
                 <tr>
                   <td><img src="assets/images/Bandeira Holanda.png"></td>
                   <td>Thiago</td>
+                  <td>1</td>
+                </tr>
+                <tr>
+                  <td><img src="assets/images/Bandeira Turquia.png"></td>
+                  <td>João Carlos</td>
                   <td>1</td>
                 </tr>
               </table>
