Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -321,6 +321,11 @@
                   <td>João Carlos</td>
                   <td>1</td>
                 </tr>
+                <tr>
+                  <td><img src="assets/images/Bandeira Turquia.png"></td>
+                  <td>Ceara</td>
+                  <td>1</td>
+                </tr>
               </table>
             </div>
           </div>
