Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                   <td>1</td>
                   <td><img src="assets/images/Bandeira Croácia.png"></td>
                   <td>Nero</td>
-                  <td>5</td>
+                  <td>6</td>
                 </tr>
                 <tr>
                   <td>2</td>
@@ -187,25 +187,25 @@
                 <tr>
                   <td>6</td>
                   <td><img src="assets/images/Bandeira Croácia.png"></td>
+                  <td>Helton</td>
+                  <td>3</td>
+                </tr>
+                <tr>
+                  <td>7</td>
+                  <td><img src="assets/images/Bandeira Croácia.png"></td>
                   <td>Caio</td>
                   <td>2</td>
                 </tr>
                 <tr>
-                  <td>7</td>
+                  <td>8</td>
                   <td><img src="assets/images/Bandeira Inglaterra.png"></td>
                   <td>Burguês</td>
                   <td>2</td>
                 </tr>
                 <tr>
-                  <td>8</td>
+                  <td>9</td>
                   <td><img src="assets/images/Bandeira Holanda.png"></td>
                   <td>Gustavo</td>
-                  <td>2</td>
-                </tr>
-                <tr>
-                  <td>9</td>
-                  <td><img src="assets/images/Bandeira Croácia.png"></td>
-                  <td>Helton</td>
                   <td>2</td>
                 </tr>
                 <tr>
@@ -228,50 +228,50 @@
                 </tr>
                 <tr>
                   <td>13</td>
+                  <td><img src="assets/images/Bandeira Turquia.png"></td>
+                  <td>Ceara</td>
+                  <td>2</td>
+                </tr>
+                <tr>
+                  <td>14</td>
                   <td><img src="assets/images/Bandeira Bélgica.png"></td>
                   <td>Clarito</td>
                   <td>1</td>
                 </tr>
                 <tr>
-                  <td>14</td>
+                  <td>15</td>
                   <td><img src="assets/images/Bandeira Dinamarca.png"></td>
                   <td>Marcos</td>
                   <td>1</td>
                 </tr>
                 <tr>
-                  <td>15</td>
+                  <td>16</td>
                   <td><img src="assets/images/Bandeira Dinamarca.png"></td>
                   <td>Helbert</td>
                   <td>1</td>
                 </tr>
                 <tr>
-                  <td>16</td>
+                  <td>17</td>
                   <td><img src="assets/images/Bandeira Dinamarca.png"></td>
                   <td>Ayrton</td>
                   <td>1</td>
                 </tr>
                 <tr>
-                  <td>17</td>
+                  <td>18</td>
                   <td><img src="assets/images/Bandeira Bélgica.png"></td>
                   <td>Rafael</td>
                   <td>1</td>
                 </tr>
                 <tr>
-                  <td>18</td>
+                  <td>19</td>
                   <td><img src="assets/images/Bandeira Inglaterra.png"></td>
                   <td>Hamilton</td>
                   <td>1</td>
                 </tr>
                 <tr>
-                  <td>19</td>
+                  <td>20</td>
                   <td><img src="assets/images/Bandeira Holanda.png"></td>
                   <td>Pedro</td>
-                  <td>1</td>
-                </tr>
-                <tr>
-                  <td>20</td>
-                  <td><img src="assets/images/Bandeira Turquia.png"></td>
-                  <td>Ceara</td>
                   <td>1</td>
                 </tr>
                 <tr>
@@ -280,12 +280,23 @@
                   <td>Artur Gabriel</td>
                   <td>1</td>
                 </tr>
+                <tr>
+                  <td>22</td>
+                  <td><img src="assets/images/Bandeira Croácia.png"></td>
+                  <td>Orivaldo</td>
+                  <td>1</td>
+                </tr>
               </table>
             </div>
             <!-- Cartões Amarelos -->
             <div class="cartoesAmarelos">
               <h2><strong>Cartões Amarelos</strong></h2>
               <table>
+                <tr>
+                  <td><img src="assets/images/Bandeira Croácia.png"></td>
+                  <td>Nero</td>
+                  <td>2</td>
+                </tr>
                 <tr>
                   <td><img src="assets/images/Bandeira Bélgica.png"></td>
                   <td>Clarito</td>
@@ -305,11 +316,6 @@
                   <td><img src="assets/images/Bandeira Bélgica.png"></td>
                   <td>David</td>
                   <td>1</td>
-                </tr>
-                <tr>
-                  <td><img src="assets/images/Bandeira Croácia.png"></td>
-                  <td>Nero</td>
-                  <td>2</td>
                 </tr>
                 <tr>
                   <td><img src="assets/images/Bandeira Holanda.png"></td>
