--- a/index.html
+++ b/index.html
@@ -298,6 +298,11 @@
                   <td>2</td>
                 </tr>
                 <tr>
+                  <td><img src="assets/images/Bandeira Holanda.png"></td>
+                  <td>Thiago</td>
+                  <td>2</td>
+                </tr>
+                <tr>
                   <td><img src="assets/images/Bandeira Bélgica.png"></td>
                   <td>Clarito</td>
                   <td>1</td>
@@ -318,11 +323,6 @@
                   <td>1</td>
                 </tr>
                 <tr>
-                  <td><img src="assets/images/Bandeira Holanda.png"></td>
-                  <td>Thiago</td>
-                  <td>1</td>
-                </tr>
-                <tr>
                   <td><img src="assets/images/Bandeira Turquia.png"></td>
                   <td>João Carlos</td>
                   <td>1</td>
@@ -330,6 +330,21 @@
                 <tr>
                   <td><img src="assets/images/Bandeira Turquia.png"></td>
                   <td>Ceara</td>
+                  <td>1</td>
+                </tr>
+                <tr>
+                  <td><img src="assets/images/Bandeira Turquia.png"></td>
+                  <td>Juliano</td>
+                  <td>1</td>
+                </tr>
+                <tr>
+                  <td><img src="assets/images/Bandeira Inglaterra.png"></td>
+                  <td>Hamilton</td>
+                  <td>1</td>
+                </tr>
+                <tr>
+                  <td><img src="assets/images/Bandeira Dinamarca.png"></td>
+                  <td>Helbert</td>
                   <td>1</td>
                 </tr>
               </table>
